<resources>
    <string name="app_name">BeerChallenge</string>
    <string name="buttonRecherche">Rechercher une bière</string>
    <string name="buttonLancerRequete">Rechercher</string>
    <string name="buttonChallenge">Consulter mes challenges</string>
    <string name="buttonToutesLesBieres">Consulter la liste des bières</string>
    <string name="buttonCatalogueBieres">Consulter mes bières consommées</string>
    <string name="BierePasBue">Bu !</string>
    <string name="uneBiere">Enregistrer une bière dans le catalogue</string>
    <string name="cinqBiere">Enregistrer cinq bières dans le catalogue</string>
    <string name="dixBiere">Enregistrer dix bières dans le catalogue</string>
    <string name="vingtBiere">Enregistrer vingt bières dans le catalogue</string>
    <string name="cinquanteBiere">Enregistrer cinquante bières dans le catalogue</string>
    <string name="centBiere">Enregistrer cent bières dans le catalogue</string>
    <string name="biereambree">Enregistrer cinq bières ambrées dans le catalogue</string>
    <string name="biereblonde">Enregistrer cinq bières blonde dans le catalogue</string>
    <string name="bierebrune">Enregistrer cinq bières brune dans le catalogue</string>
    <string name="biereblanche">Enregistrer cinq bières blanche dans le catalogue</string>
    <string name="bieredouble">Enregistrer cinq bières à fermanetation double dans le catalogue</string>
    <string name="bieretriple">Enregistrer cinq bières à fermentation triple dans le catalogue</string>
    <!--<string name="adresseRequete">alban.guichard.free.fr//BeerChallenge/rechercheBiere.php?</string>-->
    <string-array name="couleurs">
        <item></item>
        <item>Ambrée</item>
        <item>Blanche</item>
        <item>Blonde</item>
        <item>Brune</item>
        <item>Noire</item>
        <item>Rose</item>
        <item>Rouge</item>
        <item>Rousse</item>
    </string-array>
    <string-array name="fermentation">
    <item></item>
    <item>Double</item>
    <item>Triple</item>
    <item>Quadruple</item>
    <item>Basse</item>
    <item>Haute</item>
    <item>Spontanée</item>
    <item>Sans fermentation</item>
    </string-array>
    <string-array name="notes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="titleRechercheFormulaire">XXX</string>
    <string name="titrePartieTotal">Challenges sur le nombre de bières</string>
    <string name="titrePartieCouleur">Challenge sur la couleur des bières</string>
    <string name="titrePartieFermentation">Challenge sur la fermentation des bières</string>

</resources>
